# QuantTrading

./: .gitignore  CMakeLists.txt  README.md
base/: CMakeLists.txt
base/common/lock_free/: lock_free_queue.cpp  lock_free_queue.h
base/common/safe_queue/: safe_queue.cpp  safe_queue.h
base/common/thread_pool/: thread_pool.cpp  thread_pool.h
base/data_types/: tick_data.h
core/event_bus/: event_bus.h
plugins/data_sources/: idata_source.h
release/docs/: Architecture.md
tests/: CMakeLists.txt
tests/base/lock_free/: test_lock_free_queue.cpp
tests/base/thread_pool/: test_thread_pool.cpp
